updated contracts / added notfound

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,12 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
 body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  background: rgba(245, 245, 245, 1) !important;
+  color: rgba(42, 41, 46, 1);
 }
 
-button, 
+button,
 a {
   cursor: pointer;
+}
+
+img,
+svg {
+  user-select: none;
+  pointer-events: none;
+}
+
+.heading-1 {
+  font-size: 38px;
+}
+
+.common-p {
+  padding-left: 64px;
+  padding-top: 32px;
+  padding-bottom: 34px;
+}
+
+.common-container {
+  padding-left: 24px;
+  padding-right: 24px;
+  margin: 0 auto;
+}
+
+.common-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 32px;
+}
+
+.dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 16px;
+  background: var(--white);
+  width: 720px;
+  border-radius: 5px;
+
+  font-size: 13px;
+  line-height: 16px;
+
+  color: rgba(156, 154, 165, 1);
 }
