--- a/src/assets/contracts.css
+++ b/src/assets/contracts.css
@@ -1,26 +1,3 @@
-:root {
-  --white: #fff;
-}
-
-.contracts {
-  /* background: rgba(245, 245, 245, 1); */
-  /* padding-left: 64px; */
-
-}
-
-.contracts__filter {
-  margin-bottom: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.filter__list {
-  display: flex;
-  background: var(--white);
-  border-radius: 6px;
-}
-
 .filter__list-item {
   color: rgba(156, 154, 165, 1);
   min-width: 124px;
@@ -37,7 +14,7 @@
 
 .filter__list-item.active {
   background: rgba(42, 41, 46, 1);
-  color: var(--white);
+  color: #fff;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
 }
@@ -51,12 +28,12 @@
   width: 40px;
   height: 40px;
 
-  background-color: var(--white);
+  background-color: #fff;
 }
 
 .filter__buttons-item.active {
   background: rgba(42, 41, 46, 1);
-  color: var(--white);
+  color: #fff;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
 }
@@ -66,93 +43,6 @@
   border-bottom-right-radius: 6px;
 }
 
-.filter__buttons-item-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.grid-list {
-  display: none !important;
-}
-
-.card__wrap {
-  background: rgba(255, 255, 255, 1);
-  height: 368px;
-  border-radius: 15px;
-  overflow: hidden;
-}
-
-.card__top {
-  background-image: url(/img/card-img.webp);
-  background-size: cover;
-  background-position: 50% 7%;
-  min-height: 200px;
-}
-
-.card__top-content {
-  display: flex;
-  padding: 16px;
-  justify-content: space-between;
-}
-
-.card__top .status {
-  padding: 8px 12px;
-  background: rgba(239, 238, 255, 1);
-  color: rgba(110, 70, 220, 1);
-  border-radius: 100px;
-}
-
-.card__top .favorites {
-  width: 32px;
-  height: 32px;
-  background: rgba(239, 238, 255, 1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-
-
-.card__bottom {
-  z-index: 10;
-  padding: 16px;
-}
-
-.card__descr {
-  margin-top: 16px;
-}
-
-.descr__summ,
-.descr__remain,
-.descr__data {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 8px;
-}
-
-.card__title {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 500;
-}
-
-.card__subtitle {
-  font-size: 14px;
-  line-height: 20px;
-  font-weight: 400;
-}
-
-.descr__summ span,
-.descr__remain span,
-.descr__data span {
-  font-size: 14px;
-  line-height: 20px;
-  color: rgba(42, 41, 46, 1);
-}
 
 .descr__summ .digit,
 .descr__remain .digit,
