--- a/src/assets/manage.css
+++ b/src/assets/manage.css
@@ -1,79 +1,24 @@
 .manage {
-	max-width: 1088px;
-	margin: 50px auto;
-}
-
-.title {
-	font-family: 'Grtsk Giga';
-}
-
-.DataGridStyle {
-	background-color: #fff;
-	border: 0px!important;
-	box-shadow: 0 12px 16px -4px rgba(21, 21, 21, 0.05);
-	margin: 0px auto;
+  min-width: 1088px;
+  width: 100%;
 }
 
 .table-headerName {
-	background-color: #EAEBED;
-	color: #090714;
-	font-size: 12px;
+  background-color: #eaebed;
+  color: #090714;
+  font-size: 12px;
 }
 
-.MuiDataGrid-row [data-field*="fact_month"] {
-	box-shadow: -5px 0 10px 0 rgba(0, 0, 0, 0.05);
-}
-
-.manage__filter-panel {
-	margin-bottom: 32px;
-}
-
-.manage__datepicker_contaienr {
-	margin-bottom: 24px;
-	display: flex;
-}
-
-.manage__datepicker {
-	width: 600px;
-}
-
-.manage__buttom_container {
-	justify-content: flex-end;
-	width: 500px;
-	display: flex;
-}
-
-.manage__datepicker .MuiInputLabel-root {
-	transform: translate(14px, 11px) scale(0.8);
-}
-
-.manage__datepicker .MuiFormLabel-filled {
-	transform: translate(14px, -10px) scale(0.75);
-
-.manage__datepicker .MuiSvgIcon-root {
-	fill: #5134a3;
-	width: 16px;
-	height: 16px;
-}
-
-.DataGridStyle {
-	background-color: #fff;
-	border: 0px!important;
-	box-shadow: 0px 12px 16px -4px rgba(21, 21, 21, 0.05);
-	margin: 0px auto;
-}
-
-.manage .DataGridStyle .MuiDataGrid-filler, .MuiDataGrid-scrollbarFiller {
-	background-color: #eaebed;
+.MuiDataGrid-row [data-field*='fact_month'] {
+  box-shadow: -5px 0 10px 0 rgba(0, 0, 0, 0.05);
 }
 
 .table-headerName {
-	background-color: #EAEBED;
-	color: #090714;
-	font-size: 12px;
+  background-color: #eaebed;
+  color: #090714;
+  font-size: 12px;
 }
 
-.MuiDataGrid-row [data-field*="fact_month"] {
-	box-shadow: -5px 0 10px 0 rgba(0, 0, 0, 0.05);
-
+.MuiDataGrid-row [data-field*='fact_month'] {
+  box-shadow: -5px 0 10px 0 rgba(0, 0, 0, 0.05);
 }
