--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -1,64 +1,19 @@
-.sidebar {
-  left: 0;
-  top: 0;
-
-  height: 98%;
-
-  background: #f7f9fc;
-  position: fixed;
-  overflow: auto;
-  z-index: 10;
-  width: 64px;
-  /* padding: 40px 40px 40px 55px; */
-  transition: 0.2s;
-  box-shadow: 0 0 10px #00000012;
-  display: flex;
-
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  /* padding: 8px; */
-  padding: 10px 0px;
-}
-
 .sidebar__logo {
   display: block;
   margin: 24px 0px;
 }
 
-.sidebar__list {
-  margin-top: 24px;
+.ps-sidebar-root {
+  width: 240px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
 }
 
-.sidebar__bottom {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.ps-collapsed {
+  width: 64px !important;
 }
 
-.sidebar__list-item,
-.sidebar__notification {
-  border-radius: 5px;
-  width: 48px;
-  height: 48px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.sidebar__list-item:hover {
-  background-color: #f5f5f5;
-}
-
-.sidebar__list-item:hover .MuiSvgIcon-root {
-  fill: rgba(117, 75, 233, 1);
-}
-
-.sidebar__list-item:not(:last-child) {
-  margin-bottom: 8px;
-}
-
-.sidebar__profile {
-  margin-top: 10px;
-  /* border-top: 1px solid red; */
+.ps-collapsed .sidebar__menu-title {
+  display: none;
 }
