--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -9,6 +9,7 @@
   background-color: #fff;
   box-sizing: border-box;
   margin-right: 24px;
+  flex-direction: column;
 }
 
 .ps-collapsed {
@@ -20,12 +21,28 @@
   display: none;
 }
 
-.ps-collapsed .SidebarButton {
-  /* width: 64px; */
-  left: 0px;
-  position: relative;
+div[data-testid='ps-sidebar-container-test-id'] {
+  background-color: #fff;
+  display: flex;
+  justify-content: be;
 }
 
-div[data-testid='ps-sidebar-container-test-id'] {
-  background-color: #ccc;
+.sidebar-listitem {
+  width: 100%;
+}
+
+.ps-collapsed .sidebar-listitem {
+  width: 48px;
+}
+
+.SidebarButton {
+  width: 100%;
+}
+
+.ps-collapsed .SidebarButton {
+  width: 100%;
+}
+
+.sidebar__menu-title {
+  margin-left: 8px;
 }
